--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -2,7 +2,7 @@
 ftp.server.ip=140.143.163.212
 ftp.user=test
 ftp.pass=123456
-ftp.server.http.prefix=http://images.happymmall.com/
+ftp.server.http.prefix=http://images.happymmall.com
 
 
 alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
