--- a/src/main/resources.dev/datasource.properties
+++ b/src/main/resources.dev/datasource.properties
@@ -1,3 +1,4 @@
+#dev
 db.driverLocation=F:\\develope\\maven\\repo\\mysql\\mysql-connector-java\\5.1.6\\mysql-connector-java-5.1.6.jar
 db.driverClassName=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://127.0.0.1/happymmall?characterEncoding=utf-8
