--- a/src/main/resources.dev/mmall.properties
+++ b/src/main/resources.dev/mmall.properties
@@ -9,5 +9,15 @@ alipay.callback.url=http://vi5854.natappfree.cc/order/alipayCallback.do
 
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
+#redis
+redis.ip=140.143.163.212
+redis.port=6379
+
+redis.max.total=20
+redis.max.idle=10
+redis.min.idle=2
+redis.test.borrow=true
+redis.test.return=false
+
 
 
