--- a/src/main/resources.dev/mmall.properties
+++ b/src/main/resources.dev/mmall.properties
@@ -9,5 +9,23 @@ alipay.callback.url=http://vi5854.natappfree.cc/order/alipayCallback.do
 
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
+#redis
+redis1.ip=140.143.163.212
+redis1.port=6379
+
+redis2.ip=140.143.163.212
+redis2.port=6380
+
+redis3.ip=140.143.163.212
+redis3.port=6381
+
+
+
+redis.max.total=20
+redis.max.idle=10
+redis.min.idle=2
+redis.test.borrow=true
+redis.test.return=false
+
 
 
