--- a/src/main/resources.beta/mmall.properties
+++ b/src/main/resources.beta/mmall.properties
@@ -11,8 +11,16 @@ password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
 
 #redis
-redis.ip=140.143.163.212
-redis.port=6379
+redis1.ip=140.143.163.212
+redis1.port=6379
+
+redis2.ip=140.143.163.212
+redis2.port=6380
+
+redis3.ip=140.143.163.212
+redis3.port=6381
+
+
 
 redis.max.total=20
 redis.max.idle=10
